laba 5 fixes